Allow user to search

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,11 @@
   <title>Weather App</title>
 </head>
 <body>
-  
+  <header>Weather App</header>
+  <form>
+    <input type="search">
+    <button>Search</button>
+  </form>
+  <div class="data"></div>
 </body>
 </html>
