--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,163 @@
   <title>Weather App</title>
 </head>
 <body>
-  <header>Weather App</header>
-  <form>
-    <input type="search">
-    <button>Search</button>
-  </form>
-  <div class="data"></div>
+  <div id="top-controls-container">
+    <form id="search-form">
+      <img src="./icons/search.png" alt="search" width="20px">
+      <input type="search" placeholder="Search for a location...">
+      <img src="./icons/remove.png" alt="remove" width="20px">
+      <button>Search</button>
+    </form>
+    <div id="settings-container">
+      <img src="./icons/settings.png" alt="settings" width="20px">
+    </div>
+  </div>
+  <div id="current-data-container">
+    <div class="top">
+      <div class="main">
+        <img src="./icons/sunny.png" alt="" width="20px">
+        <div>
+          <div id="temp">13.2°</div>
+          <div id="conditions">Clear</div>
+        </div>
+      </div>
+      <div class="secondary">
+        <div id="min">
+          <img src="./icons/arrow-down.png" alt="" width="20px">
+          <div>Min</div>
+          <div>12.2°</div>
+        </div>
+        <div id="max">
+          <img src="./icons/up-arrow.png" alt="" width="20px">
+          <div>Max</div>
+          <div>35.1°</div>
+          <div id="feels-like">Feels like 13.6°</div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom">
+      <div id="chance-of-rain">
+        <img src="./icons/heavy-rain.png" alt="" width="20px">
+        <div>Chance of rain</div>
+        <div>0%</div>
+      </div>
+      <div id="wind">
+        <img src="./icons/arrow-right.png" alt="" width="20px">
+        <div>Wind</div>
+        <div>7.9km/h</div>
+      </div>
+      <div id="sunrise">
+        <img src="./icons/sunrise.png" alt="" width="20px">
+        <div>Sunrise</div>
+        <div>05:38 AM</div>
+      </div>
+      <div id="sunset">
+        <img src="./icons/sunset.png" alt="" width="20px">
+        <div>Sunset</div>
+        <div>07:34 PM</div>
+      </div>
+      <div id="uv-index">
+        <img src="./icons/sun.png" alt="" width="20px">
+        <div>UV Index</div>
+        <div>2.6</div>
+      </div>
+      <div id="pressure">
+        <img src="./icons/trend.png" alt="" width="20px">
+        <div>Pressure</div>
+        <div>1011 mb</div>
+      </div>
+      <div id="humidity">
+        <img src="./icons/raindrop.png" alt="" width="20px">
+        <div>Humidity</div>
+        <div>40%</div>
+      </div>
+      <div id="gusts">
+        <img src="./icons/wind.png" alt="" width="20px">
+        <div>Gusts</div>
+        <div>16.6 km/h</div>
+      </div>
+    </div>
+  </div>
+  <div id="hourly-container">
+    <div>Hourly</div>
+    <div id="hourly-data-container">
+      <div>
+        <div>5 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>6 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>7 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>8 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>9 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>10 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>11 AM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+      <div>
+        <div>12 PM</div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+      </div>
+    </div>
+  </div>
+  <div id="week-container">
+    <div>This Week</div>
+    <div id="week-data-container">
+      <div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+        <div>SUN</div>
+        <div>18 MAY</div>
+        <div>
+          <div>12.2°</div>
+          <div>min</div>
+        </div>
+        <div>
+          <div>35.1°</div>
+          <div>max</div>
+        </div>
+      </div>
+      <div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+        <div>MON</div>
+        <div>19 MAY</div>
+        <div>
+          <div>10.8°</div>
+          <div>min</div>
+        </div>
+        <div>
+          <div>34°</div>
+          <div>max</div>
+        </div>
+      </div>
+      <div>
+        <img src="./icons/sunny.png" alt="" width="20px">
+        <div>TUE</div>
+        <div>20 MAY</div>
+        <div>
+          <div>21.5°</div>
+          <div>min</div>
+        </div>
+        <div>
+          <div>38.8°</div>
+          <div>max</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
